--- a/index.html
+++ b/index.html
@@ -2,6 +2,32 @@
 <html>
   <head>
     <title>Facebook</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header">
+        <div class="logo">
+          <p>facebook</p>
+        </div>
+        <div class="facebook-login">
+          <div>
+            <label for="email">Email or Phone</label>
+            <br />
+            <input type="text" name="email" id="email" />
+          </div>
+          <div>
+            <label for="password">Password</label>
+            <br />
+            <input type="password" name="password" id="password" />
+            <br />
+            <p style="margin-top: 5px">Forgot Password?</p>
+          </div>
+          <div>
+            <input type="submit" value="Log In" class="login-button" />
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
