--- a/index.html
+++ b/index.html
@@ -43,6 +43,105 @@
       </div>
       <div class="right-body">
         <p>Create and account</p>
+        <p>It's free and always will be</p>
+        <form>
+          <input type="text" name="Firstname" placeholder="First name" />
+          <input type="text" name="Surname" placeholder="Surname" />
+          <br />
+          <input
+            type="text"
+            name="Mobile"
+            placeholder="Mobile number or email address"
+          />
+          <br />
+          <input
+            type="text"
+            name="ReMobile"
+            placeholder="Re-enter mobile number or email address"
+          />
+          <br />
+          <input type="password" name="Password" placeholder="New password" />
+          <br />
+          <p>Birthday</p>
+          <!-- <input list="date" /> -->
+          <select name="date">
+            <option value="">Day</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+            <option value="25">25</option>
+            <option value="26">26</option>
+            <option value="27">27</option>
+            <option value="28">28</option>
+            <option value="29">29</option>
+            <option value="30">30</option>
+          </select>
+          <select name="month">
+            <option value="">Month</option>
+            <option value="Jan">Jan</option>
+            <option value="Feb">Feb</option>
+            <option value="Mar">Mar</option>
+            <option value="Apr">Apr</option>
+            <option value="May">May</option>
+            <option value="Jun">Jun</option>
+            <option value="Jul">Jul</option>
+            <option value="Aug">Aug</option>
+            <option value="Sep">Sep</option>
+            <option value="Oct">Oct</option>
+            <option value="Nov">Nov</option>
+            <option value="Dec">Dec</option>
+          </select>
+          <select name="year">
+            <option value="">Year</option>
+            <option value="2024">2024</option>
+            <option value="2023">2023</option>
+            <option value="2022">2022</option>
+            <option value="2021">2021</option>
+            <option value="2020">2020</option>
+            <option value="2019">2019</option>
+            <option value="2018">2018</option>
+            <option value="2017">2017</option>
+            <option value="2016">2016</option>
+            <option value="2015">2015</option>
+            <option value="2014">2014</option>
+            <option value="2013">2013</option>
+            <option value="2012">2012</option>
+            <option value="2011">2011</option>
+            <option value="2010">2010</option>
+          </select>
+          <span>Why do I need to provide my date of birth?</span>
+          <br />
+          <input type="radio" name="gender" value="male" />Male
+          <input type="radio" name="gender" value="FEmale" />Female
+        </form>
+        <p>
+          By clicking Create an account you agree to our Terms and that you have
+          read our Data Policy, including our Cookie Use
+        </p>
+        <button>Create an account</button>
+        <br />
+        <a href="">Create a Page</a> for a celebrity, band or business
       </div>
     </div>
   </body>
