--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
             <br />
             <input type="password" name="password" id="password" />
             <br />
-            <p style="margin-top: 5px; color: rgb(201, 201, 201)">
-              Forgot Password?
+            <p style="margin-top: 5px">
+              <a
+                href=""
+                style="text-decoration: none; color: rgb(201, 201, 201)"
+                >Forgot Password?</a
+              >
             </p>
           </div>
           <div>
@@ -228,13 +232,36 @@
             style="margin-right: 7px; margin-left: 20px"
           />Female
         </form>
-        <p class="font-language" style="font-size: 12px; margin-top: 10px">
-          By clicking Create an account you agree to our Terms and that <br />
-          you have read our Data Policy, including our Cookie Use
+        <p
+          class="font-language"
+          style="
+            font-size: 12px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            line-height: 1.5;
+          "
+        >
+          By clicking Create an account you agree to our
+          <a href="" style="text-decoration: none; color: rgb(38, 38, 189)"
+            >Terms</a
+          >
+          and that <br />
+          you have read our
+          <a href="" style="text-decoration: none; color: rgb(38, 38, 189)"
+            >Data Policy</a
+          >, including our
+          <a href="" style="text-decoration: none; color: rgb(38, 38, 189)"
+            >Cookie Use</a
+          >
         </p>
         <button>Create an account</button>
         <br />
-        <a href="">Create a Page</a> for a celebrity, band or business
+        <p style="font-size: 12px">
+          <a href="" style="text-decoration: none; color: rgb(38, 38, 189)"
+            >Create a Page</a
+          >
+          for a celebrity, brand or business
+        </p>
       </div>
     </div>
   </body>
