--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             >Cookie Use</a
           >
         </p>
-        <button>Create an account</button>
+        <button class="create-button">Create an account</button>
         <br />
         <p style="font-size: 12px">
           <a href="" style="text-decoration: none; color: rgb(38, 38, 189)"
@@ -264,5 +264,69 @@
         </p>
       </div>
     </div>
+    <footer>
+      <div class="lang-container">
+        <a href="" class="lang">English (UK)</a>
+        <a href="" class="lang">हिंदी</a>
+        <a href="" class="lang">ગુજરાતી</a>
+        <a href="" class="lang">বাংলা</a>
+        <a href="" class="lang">ಕನ್ನಡ</a>
+        <a href="" class="lang">اردو</a>
+        <a href="" class="lang">ਪੰਜਾਬੀ</a>
+        <a href="" class="lang">मराठी</a>
+        <a href="" class="lang">தமிழ்</a>
+        <a href="" class="lang">తెలుగు</a>
+        <button style="padding: 3px; width: 30px; cursor: pointer">+</button>
+      </div>
+      <div class="footer-container">
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Sign Up</a>
+          <a href="" class="footer-block-value">Celebrities</a>
+          <a href="" class="footer-block-value">AdChoices</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Log In</a>
+          <a href="" class="footer-block-value">Groups</a>
+          <a href="" class="footer-block-value">Terms</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Messenger</a>
+          <a href="" class="footer-block-value">Moments</a>
+          <a href="" class="footer-block-value">Help</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Facebook Lite</a>
+          <a href="" class="footer-block-value">Instagram</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Mobile</a>
+          <a href="" class="footer-block-value">About</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Find Friends</a>
+          <a href="" class="footer-block-value">Create Account</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">People</a>
+          <a href="" class="footer-block-value">Create Page</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Pages</a>
+          <a href="" class="footer-block-value">Developers</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Places</a>
+          <a href="" class="footer-block-value">Careers</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Games</a>
+          <a href="" class="footer-block-value">Privacy</a>
+        </div>
+        <div class="footer-block">
+          <a href="" class="footer-block-value">Locations</a>
+          <a href="" class="footer-block-value">Cookies</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
